# is-it-slop

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  justfile  pyproject.toml  release-plz.toml  ruff.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: CI.yaml  release-plz.yaml  release.yaml
crates/is-it-slop/: Cargo.toml  build.rs
crates/is-it-slop-preprocessing/: Cargo.toml
crates/is-it-slop-preprocessing/src/pre_processor/: mod.rs
crates/is-it-slop-preprocessing/src/pre_processor/vectorizer/: count_vectorizer.rs  ngrams.rs  params.rs  tfidf_vectorizer.rs  tokenizer.rs
crates/is-it-slop-preprocessing/src/python/: mod.rs
crates/is-it-slop/model_artifacts/0.1.0/: classification_threshold.txt
crates/is-it-slop/src/: lib.rs
crates/is-it-slop/src/model/: mod.rs  threshold.rs
crates/is-it-slop/src/pipeline/: mod.rs  prediction.rs
crates/is-it-slop/src/python/: mod.rs
crates/slop-cli/: Cargo.toml
crates/slop-cli/src/: main.rs
crates/slop-inference/: Cargo.toml  build.rs
crates/slop-inference/src/: lib.rs  pipeline.rs
crates/slop-inference/src/model/: mod.rs  threshold.rs
crates/slop-pre-processing/: Cargo.toml
crates/slop-pre-processing/src/: lib.rs
crates/slop-pre-processing/src/pre_processor/: mod.rs
crates/slop-pre-processing/src/pre_processor/vectorizer/: count_vectorizer.rs  mod.rs  ngrams.rs  params.rs  tfidf_vectorizer.rs  tokenizer.rs
crates/slop-pre-processing/src/python/: mod.rs
data/: efficiency-lb-1st-place-solution.py  train-your-own-tokenizer.py
model_artifacts/0.1.0/: classification_threshold.txt
notebooks/: __init__.py  chunk_test.ipynb  chunk_test.py  dataset_curation.ipynb  dataset_curation.py  plots.py  train.ipynb  train.py
python/: pyproject.toml
python/is-it-slop/: pyproject.toml
python/is-it-slop-preprocessing/: pyproject.toml
python/is-it-slop-preprocessing/src/is_it_slop_preprocessing/: _internal.py
python/is-it-slop/src/is_it_slop/: __init__.py  _internal.py
python/slop-pre-processing/: README.md  pyproject.toml
python/slop-pre-processing/src/slop_pre_processing/: __init__.py  _internal.py
python/slop_pre_processing/: __init__.py  _internal.py
