[workspace]
resolver = "3"
members = ["crates/slop-pre-processing"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
color-eyre = "0.6.5"
csv = "1.4.0"
indicatif = { version = "0.18.3", features = ["rayon"] }
ndarray = { version = "0.15", features = ["blas"] }
blas-src = { version = "0.10", features = ["accelerate"] }
sprs = "0.11"
tiktoken-rs = "0.9.1"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0", features = ["serde"] }
dashmap = "6.1.0"
ahash = { version = "0.8.12", features = ["serde"] }
smartcore = { version = "^0.4.3", features = ["ndarray-bindings", "serde"] }
mimalloc = { version = "*", features = ["v3"] }
russell_lab = "1.10"
russell_sparse = "1.10"
anyhow = "1.0.100"
rand = "0.9.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
pyo3 = { version = "0.27", default-features = false, features = [
    "extension-module",
    "macros",
] }
pyo3-log = { version = "0.13.2" }
numpy = "0.27"
