[workspace]
resolver = "3"
members = ["crates/slop-inference", "crates/slop-pre-processing"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
authors = ["SamBroomy"]
license = "MIT"
repository = "https://github.com/SamBroomy/is-it-slop"
homepage = "https://github.com/SamBroomy/is-it-slop"
readme = "README.md"
description = "A Rust library and CLI tool to detect AI-generated slop text using machine learning."
categories = ["command-line-utilities", "data-processing", "machine-learning"]
keywords = ["Slop detector", "ML"]


[workspace.dependencies]
color-eyre = "0.6.5"
csv = "1.4.0"
indicatif = { version = "0.18.3", features = ["rayon"] }
ndarray = { version = "0.15", features = ["blas"] }
blas-src = { version = "0.10", features = ["accelerate"] }
sprs = "0.11"
tiktoken-rs = "0.9.1"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0", features = ["serde"] }
smallvec = { version = "1.15", features = [
    "serde",
    "union",
    "bincode",
    "impl_bincode",
] }
dashmap = "6.1.0"
ahash = { version = "0.8.12", features = ["serde"] }
smartcore = { version = "^0.4.3", features = ["ndarray-bindings", "serde"] }
mimalloc = { version = "*", features = ["v3"] }
russell_lab = "1.10"
russell_sparse = "1.10"
anyhow = "1.0.100"
rand = "0.9.2"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = "0.3.20"
pyo3 = { version = "0.27", default-features = false, features = [
    "extension-module",
    "macros",
] }
pyo3-log = { version = "0.13.2" }
numpy = "0.27"
ort = "2.0.0-rc.10"


slop-pre-processing = { path = "crates/slop-pre-processing" }


[workspace.lints.clippy]
multiple_crate_versions = "allow"
# But allow some pedantic lints that might be too strict
module_name_repetitions = "allow"
similar_names = "allow"
too_many_lines = "allow"
# cast_precision_loss = "allow"
# cast_possible_wrap = "allow"
# cast_sign_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
dbg-macro = "warn"
unreadable_literal = "allow"

#must_use_candidate = "allow" # --fix fixes this
return_self_not_must_use = "allow" # --fix does not fix this
cast_possible_truncation = "allow"

# Specific lints to deny (treat as errors)
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
#unwrap_used = "deny"

#unreadable_literal = "warn"
redundant_else = "warn"
needless_pass_by_value = "warn"


# Nursery lints (experimental but useful)
use_self = "warn"
option_if_let_else = "warn"
redundant_pub_crate = "warn"


# Enable Clippy lints for the entire workspace
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
[workspace.lints.rust]
# Standard Rust lints
#smissing_docs = "warn"
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"
