[workspace]
resolver = "3"
members = ["crates/is-it-slop", "crates/is-it-slop-preprocessing"]

[workspace.package]
version = "0.5.0-alpha.0"
edition = "2024"
# rust-version = "1.89"
authors = ["SamBroomy <36888606+SamBroomy@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/SamBroomy/is-it-slop"
homepage = "https://github.com/SamBroomy/is-it-slop"
readme = "README.md"
description = "Detect AI-generated slop text using machine learning."
categories = ["command-line-utilities", "science", "text-processing", "parser"]
keywords = [
    "AI-text-detector",
    "Machine-learning",
    "onnx",
    "pyo3",
    "text-classification",
]


[workspace.dependencies]
is-it-slop-preprocessing = { path = "crates/is-it-slop-preprocessing", version = "0.5.0-alpha" }
is-it-slop = { path = "crates/is-it-slop", version = "0.5.0-alpha" }


ahash = { version = "0.8.12", features = ["serde"] }
anyhow = "1.0.100"
bincode = { version = "2.0", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
dashmap = "6.1.0"
indicatif = { version = "0.18.3", features = ["rayon"] }
mimalloc = { version = "0.1.48", features = ["v3"] }
ndarray = "0.16"
numpy = "0.27"
ort = "2.0.0-rc.10"
pyo3 = { version = "0.27", default-features = false, features = [
    "extension-module",
    "macros",
] }
pyo3-log = { version = "0.13.2" }
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
smallvec = { version = "1.15", features = ["serde", "bincode", "impl_bincode"] }
sprs = "0.11"
tiktoken-rs = "0.9.1"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = "0.3.20"
# dev-dependencies
directories = "6"
flate2 = "1.1.5"
tar = "0.4.44"
tempfile = "3.23.0"
ureq = "3.1.4"


[workspace.lints.rust]
# Standard Rust lints
missing_docs = "warn"
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
multiple_crate_versions = "allow"
# But allow some pedantic lints that might be too strict
module_name_repetitions = "allow"
similar_names = "allow"
too_many_lines = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
dbg-macro = "warn"
unreadable_literal = "allow"

#must_use_candidate = "allow" # --fix fixes this
return_self_not_must_use = "allow" # --fix does not fix this
cast_possible_truncation = "allow"

# Specific lints to deny (treat as errors)
dbg_macro = "deny"
# todo = "deny"
unimplemented = "deny"
#unwrap_used = "deny"

#unreadable_literal = "warn"
redundant_else = "warn"
needless_pass_by_value = "warn"


# Nursery lints (experimental but useful)
use_self = "warn"
option_if_let_else = "warn"
redundant_pub_crate = "warn"


# Enable Clippy lints for the entire workspace
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -2 }

[profile.release]
strip = true
lto = "fat"

[profile.profiling]
inherits = "release"
strip = false
debug = "full"
lto = false


[profile.dist]
inherits = "release"
