
[project]
name = "is-it-slop"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "numpy>=2.3",
    "polars>=1.35",
    "scikit-learn>=1.7",
    "scipy>=1.16",
    "loguru>=0.7.3",
    "tqdm>=4.67.1",
    "skl2onnx>=1.19.1",
    "onnxruntime>=1.23.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7",
    "ipywidgets>=8.1.7",
    "maturin>=1.8.7",
    "pytest>=9",
    "ruff>=0.11.11",
    "ty>=0.0.1a27",
]

[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
features = ["python"]
python-source = "python"
manifest-path = "crates/slop-pre-processing/Cargo.toml"
module-name = "slop_pre_processing._rust_bindings"
