[project]
name = "is-it-slop-package"
version = "0.3.1"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "is-it-slop-preprocessing",
    "is-it-slop",
    "polars>=1.35",
    "scikit-learn>=1.7",
    "loguru>=0.7.3",
    "skl2onnx>=1.19.1",
    "onnxruntime>=1.23.2",
    "datasets>=4.4.1",
    "huggingface-hub>=1.1.5",
    "polars-splitters>=0.4.5",
    "matplotlib>=3.10.7",
    "mlflow>=3.6.0",
    "tiktoken>=0.12.0",
    "seaborn>=0.13.2",
    "semver>=3.0.4",
]

[dependency-groups]
dev = [
    "ipykernel>=7",
    "ipywidgets>=8.1.7",
    "maturin>=1.10.2",
    "nbconvert>=7.16.6",
    "pytest>=9.0.1",
    "ruff>=0.14.0",
    "ty>=0.0.1a28",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["python/is-it-slop-preprocessing", "python/is-it-slop"]

[tool.uv.sources]
is-it-slop-preprocessing = { workspace = true }
is-it-slop = { workspace = true }
