[project]
name = "is-it-slop-package"
version = "0.3.2"
description = "Extremely fast embedded AI text detector, using classic ML, written and served in rust."
authors = [
    { name = "SamBroomy", email = "36888606+SamBroomy@users.noreply.github.com" },
]
requires-python = ">=3.11"
keywords = [
    "AI-text-detector",
    "ML",
    "TF-IDF",
    "Tokenization",
    "ai-detection",
    "machine-learning",
    "onnx",
    "pyo3",
    "rust",
    "text-classification",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Rust",
    "Topic :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Topic :: Text Processing",
    "Typing :: Typed",
]
license = "./LICENSE"
readme = "./README.md"


dependencies = [
    "is-it-slop-preprocessing",
    "is-it-slop",
    "polars>=1.35",
    "scikit-learn>=1.7",
    "loguru>=0.7.3",
    "skl2onnx>=1.19.1",
    "onnxruntime>=1.23.2",
    "datasets>=4.4.1",
    "huggingface-hub>=1.1.5",
    "polars-splitters>=0.4.5",
    "matplotlib>=3.10.7",
    "mlflow>=3.6.0",
    "tiktoken>=0.12.0",
    "seaborn>=0.13.2",
    "semver>=3.0.4",
]

[dependency-groups]
dev = [
    "ipykernel>=7",
    "ipywidgets>=8.1.7",
    "jupytext>=1.18.1",
    "maturin>=1.10.2",
    "nbconvert>=7.16.6",
    "nbstripout>=0.8.2",
    "pytest>=9.0.1",
    "ruff>=0.14.0",
    "ty>=0.0.1a32",
]

[project.urls]
Homepage = "https://github.com/SamBroomy/is-it-slop"
Documentation = "https://github.com/SamBroomy/is-it-slop/blob/main/README.md"
Repository = "https://github.com/SamBroomy/is-it-slop"
Issues = "https://github.com/SamBroomy/is-it-slop/issues"


[tool.uv]
package = false

[tool.uv.workspace]
members = ["python/is-it-slop-preprocessing", "python/is-it-slop"]

[tool.uv.sources]
is-it-slop-preprocessing = { workspace = true }
is-it-slop = { workspace = true }
