[package]
name = "is-it-slop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
include = [
    "src/**",
    "build.rs",
    "model_artifacts/0.1.0/classification_threshold.txt",
    "model_artifacts/0.1.0/slop-classifier.onnx",
    "model_artifacts/0.1.0/tfidf_vectorizer.bin",

]

[lib]
name = "is_it_slop"
crate-type = ["rlib", "cdylib"]

[dependencies]
ndarray = { workspace = true }
ort = { workspace = true }
sprs = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }

# CLI-only dependencies (optional)
serde_json = { workspace = true, optional = true }
clap = { workspace = true, optional = true }

# Python bindings dependencies (optional)
mimalloc = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true }
pyo3-log = { workspace = true, optional = true }

is-it-slop-preprocessing = { workspace = true }

[[bin]]
name = "is-it-slop"
required-features = ["cli"]

[features]
cli = ["dep:clap", "dep:serde_json", "mimalloc"]
python = ["dep:pyo3", "dep:pyo3-log", "mimalloc"]
mimalloc = ["dep:mimalloc"]

[lints]
workspace = true
