[package]
name = "is-it-slop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
# Model artifacts are downloaded at build time if not present
# See build.rs for download logic
exclude = ["model_artifacts/**"]

[lib]
name = "is_it_slop"
crate-type = ["rlib", "cdylib"]

[dependencies]
is-it-slop-preprocessing = { workspace = true }

anyhow = { workspace = true }
ndarray = { workspace = true }
ort = { workspace = true }
serde = { workspace = true }
sprs = { workspace = true }
# CLI-only dependenciess
clap = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
# Python bindings dependencies
mimalloc = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true }
pyo3-log = { workspace = true, optional = true }

[[bin]]
name = "is-it-slop"
required-features = ["cli"]

[features]
cli = ["dep:clap", "dep:serde_json", "mimalloc"]
python = ["dep:pyo3", "dep:pyo3-log", "mimalloc"]
mimalloc = ["dep:mimalloc"]
# Build with empty model artifacts (for docs, won't work at runtime)
stub-model = []


all-testable = ["cli"] # add other features here, but NOT python

[package.metadata.docs.rs]
features = ["stub-model"]

[build-dependencies]
directories = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
ureq = { workspace = true }

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["directories", "flate2", "tar", "tempfile", "ureq"]
