[package]
name = "slop-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slop-inference = { path = "../slop-inference" }

[lints]
workspace = true
