[package]
name = "slop-inference"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true


[dependencies]
# ort = { workspace = true }
# sprs = { workspace = true }
# ndarray = { workspace = true }
ndarray = "0.16"
ort = "=2.0.0-rc.10"
sprs = "0.11"
slop-pre-processing = { workspace = true }


[lints]
workspace = true
