[package]
name = "slop-pre-processing"
version.workspace = true
edition.workspace = true


[lib]
name = "slop_pre_processing"
crate-type = ["cdylib", "rlib"]


[dependencies]
tiktoken-rs = { workspace = true }
ndarray = { workspace = true }
indicatif = { workspace = true }
sprs = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }
dashmap = { workspace = true }
ahash = { workspace = true }
mimalloc = { workspace = true }
russell_lab = { workspace = true }
russell_sparse = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
pyo3 = { workspace = true, optional = true }
numpy = { workspace = true, optional = true }
pyo3-log = { workspace = true, optional = true }

[features]
default = ["bincode"]
python = ["pyo3", "numpy", "pyo3-log", "serde", "bincode"]
serde = ["dep:serde", "dep:serde_json"]
bincode = ["dep:bincode"]
