[package]
name = "slop-pre-processing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true


[lib]
name = "slop_pre_processing"
crate-type = ["cdylib", "rlib"]


[dependencies]
tiktoken-rs = { workspace = true }
ndarray = { workspace = true }
indicatif = { workspace = true, optional = true }
sprs = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }
smallvec = { workspace = true }
dashmap = { workspace = true }
ahash = { workspace = true }
mimalloc = { workspace = true }
russell_lab = { workspace = true }
russell_sparse = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
pyo3 = { workspace = true, optional = true }
numpy = { workspace = true, optional = true }
pyo3-log = { workspace = true, optional = true }

[features]
default = ["bincode"]
python = ["pyo3", "numpy", "pyo3-log", "serde", "bincode", "progress-bars"]
serde = ["dep:serde", "dep:serde_json"]
bincode = ["dep:bincode"]
progress-bars = ["dep:indicatif"]


[lints]
workspace = true
