[project]
name = "slop-pre-processing"
version = "0.1.0"
description = "Fast TF-IDF vectorization with Rust-backed preprocessing"
readme = "README.md"
authors = [
    { name = "SamBroomy", email = "36888606+SamBroomy@users.noreply.github.com" },
]
requires-python = ">=3.11"
dependencies = ["numpy>=2.0", "scipy>=1.14"]

[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
features = ["python"]
python-source = "src"
manifest-path = "../../crates/is-it-slop-preprocessing/Cargo.toml"
module-name = "slop_pre_processing._slop_pre_processing_rust_bindings"
